--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -31,6 +31,7 @@ dependencies:
   flutter:
     sdk: flutter
   intl: ^0.18.1
+  outline_search_bar: ^2.3.0
 
 
   # The following adds the Cupertino Icons font to your application.
